text overflow fixed aboutRotate

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,23 +18,6 @@
   }
 }
 
-.info{
-  font-size: 2.7vh;
-  position: absolute;
-  top: 87vh;
-  left: 2.2%;
-  color: #000
-}
-
-@media only screen and (max-width: 700px) {
-  .info{
-    font-size: 2.7vh;
-    position: absolute;
-    top: 55vh;
-    left: 5.2%;
-  }
-}
-
 .mediv{
   position: absolute;
   top: 150% !important;
@@ -46,39 +29,6 @@
     margin: 25rem 0rem 0rem -9rem;
     height: 20vh !important;
     width: 50vh !important
-  }
-}
-
-/* positioning */
-.popupDiv{
-  position: absolute;
-  top: 2%;
-  left: 96.5%
-}
-/* styling */
-.popupButton{
-  position: absolute;
-  cursor: pointer;
-  padding: 0.5% 0.1% !important;
-  background-color: white;
-  color: black;
-  font-size: 7vh !important;
-  transition: transform 250ms cubic-bezier(.2,.8,.4,1);
-} 
-.popupButton:hover{
-    transform: scale(1.10);
-    background-color: #fff;
-}
-.popupButton:active{
-    transform: scale(0.9);
-}  
-
-@media only screen and (max-width: 700px) {
-  .popupDiv{
-    position: absolute;
-    left: 82%;
-    margin: 0.5rem 0rem 0rem 1rem;
-    cursor: pointer
   }
 }
 
@@ -99,6 +49,7 @@
     width: 8vh;
     font-size: 7vh !important;
     transition: transform 250ms cubic-bezier(.2,.8,.4,1);
+    z-index: 1;
   } 
 
   .cmdkbutton:hover{
@@ -108,7 +59,6 @@
   .cmdkbutton:active{
       transform: scale(0.9);
   }  
-
   @media only screen and (max-width: 700px) {
     .cmdkbutton{
       position: absolute;
@@ -122,7 +72,17 @@
 
   .aboutRotate {
     position: absolute;
-    margin: 50rem 0rem 0rem 1rem;
+    margin: 50rem 0rem 0rem 1.5rem;
     font-size: 2.5vh;
-    display: block
+    display: inline-block;
+    overflow: none !important;
+    text-align: center;
+    display: flex;
+    width: 750px;
+    flex-direction: inline-block;
+  }
+  .age{padding-right: 8px;}
+  .rotate {
+    display: block;
+    text-align: center;
   }
